SEO dosyaları oluşturuldu ve resimler yeniden adlandırıldı

--- a/degerler.html
+++ b/degerler.html
@@ -6,7 +6,7 @@
   <title>Değerler Eğitimi - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nde dürüstlük, adalet, saygı ve sorumluluk gibi evrensel değerleri öğrencilerimize kazandırarak onları hem başarılı hem de erdemli bireyler olarak yetiştiriyoruz.">
   <meta name="keywords" content="değerler eğitimi, ahlaki gelişim, erdemli bireyler, dürüstlük, adalet, saygı, sorumluluk, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -128,7 +128,7 @@
             <h3 class="mb-0 ms-3">Etüt Çalışmaları</h3>
           </div>
           <div class="assessment-image mb-4 rounded-3 overflow-hidden">
-            <img src="../image/etüt/5.jpg" 
+            <img src="../image/etut/5.jpg" 
                  alt="Etüt çalışmaları" class="img-fluid w-100">
           </div>
           <p>Çalışan toplumlarda öğrencinin ailesi ile geçirdiği zaman kısıtlıdır. Aile evde olduğu zaman diliminde çocuğuyla kaliteli zaman geçirmek istemektedir.
@@ -177,7 +177,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
             <h3 class="mb-0 ms-3">Ödevlendirme</h3>
           </div>
           <div class="assessment-image mb-4 rounded-3 overflow-hidden">
-            <img src="../image/ödevlendirme/5.jpg" 
+            <img src="../image/odevlendirme/5.jpg" 
                  alt="Ödevlendirme" class="img-fluid w-100">
           </div>
           <p>Eğitim yönüyle gelişmiş olan toplumlarda ödevin ağırlığı ve niteliği diğer toplumlara göre farklılıklar gösterir. Yapılan araştırmalar ödevin, çocuğun yaşamında özellikle zaman yönetimi ve sorumluluk duygusunu kazanmada etkin bir yere sahip olduğunu ortaya koymaktadır. Klasik eğitim anlayışından farklı olarak önerilen ödev, öğrenciyi aktif kılan, düşünmeye ve araştırmaya sevk eden, aile bireyleriyle işbirliği yapmayı gerektiren nitelikte ödevlerin verilmesidir.</p>
@@ -200,7 +200,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
             <h3 class="mb-0 ms-3">Kazanım Tarama & Dijital Sistem</h3>
           </div>
           <div class="assessment-image mb-4 rounded-3 overflow-hidden">
-            <img src="../image/dijital eğitim/1.JPEG" 
+            <img src="../image/dijital-egitim/1.JPEG" 
                  alt="Dijital eğitim" class="img-fluid w-100">
           </div>
           <p>Kapsamlı dijital değerlendirme çözümlerimiz:</p>
@@ -221,7 +221,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
 <style>
   .hero-section {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-              url('../image/anasayfa1.JPG') center/cover no-repeat;
+              url('../image/anasayfa-sirac-koleji.jpg') center/cover no-repeat;
   color: white;
   padding: 180px 0;
   text-align: center;
