--- a/gorsel.html
+++ b/gorsel.html
@@ -6,7 +6,7 @@
   <title>Görsel Sanatlar ve Ahşap Atölyesi - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nde öğrencilerimiz, görsel sanatlar ve ahşap atölyesi ile yaratıcılıklarını geliştirir, estetik algılarını güçlendirir ve el becerilerini en üst düzeye çıkarır.">
   <meta name="keywords" content="görsel sanatlar, ahşap atölyesi, sanat eğitimi, yaratıcılık, el becerisi, estetik algı, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -114,8 +114,8 @@
       </div>
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="image-grid">
-          <img src="../image/görsel sanatlar ve ahşap/6.jpg" alt="Ahşap Atölyesi Çalışmaları" class="img-fluid rounded shadow">
-          <img src="../image/görsel sanatlar ve ahşap/7.jpg" alt="Görsel Sanatlar Çalışmaları" class="img-fluid rounded shadow">
+          <img src="../image/gorsel-sanatlar-ve-ahsap/6.jpg" alt="Ahşap Atölyesi Çalışmaları" class="img-fluid rounded shadow">
+          <img src="../image/gorsel-sanatlar-ve-ahsap/7.jpg" alt="Görsel Sanatlar Çalışmaları" class="img-fluid rounded shadow">
         </div>
       </div>
     </div>
@@ -124,7 +124,7 @@
 <style>
   .hero-section {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-              url('../image/hasabbackground.jpg') center/cover no-repeat;
+              url('../image/ahsap-atolyesi-arkaplan.jpg') center/cover no-repeat;
   color: white;
   padding: 180px 0;
   text-align: center;
