--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ana Sayfa - 18 Mart Sirac Koleji - Çanakkale Özel Okul</title>
   <meta name="description" content="Çanakkale'nin önde gelen özel okullarından 18 Mart Sirac Koleji, Montessori destekli eğitim anlayışıyla geleceğe yön veren, erdemli ve üretken nesiller yetiştirir.">
   <meta name="keywords" content="Çanakkale özel okul, Sirac Koleji, Montessori eğitimi, değerler eğitimi, manevi eğitim, robotik kodlama, yabancı dil, anaokulu, ilkokul">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -97,7 +97,7 @@
 <section class="hero-video-section position-relative text-white d-flex align-items-center" style="height: 100vh; overflow: hidden;">
   <!-- Video Background -->
   <video autoplay muted loop playsinline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover z-n1">
-    <source src="../image/okul görseli/OKULVIDOU.mp4" type="video/mp4" title="18 Mart Sirac Koleji Tanıtım Videosu">
+    <source src="../image/okul-gorseli/OKULVIDOU.mp4" type="video/mp4" title="18 Mart Sirac Koleji Tanıtım Videosu">
     Tarayıcınız video etiketini desteklemiyor.
   </video>
 
@@ -213,7 +213,7 @@
       <!-- 3. Kart -->
       <div class="activity-card shadow-sm rounded">
         <div class="activity-img rounded-top overflow-hidden">
-          <img src="../image/manevi eğitim/1  (3).JPG" alt="Gelişim Atölyesi" />
+          <img src="../image/manevi-egitim/1  (3).JPG" alt="Gelişim Atölyesi" />
         </div>
         <div class="activity-content p-4">
           <div class="activity-date text-primary fw-semibold mb-2">22 Mayıs 2023</div>
