--- a/kulupler.html
+++ b/kulupler.html
@@ -6,7 +6,7 @@
   <title>Öğrenci Kulüpleri ve P4C - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nde öğrencilerimizin ilgi alanlarını ve yeteneklerini keşfetmelerini sağlayan okuma, teknoloji, müzik, sanat, spor ve bilim kulüplerimiz hakkında bilgi alın.">
   <meta name="keywords" content="öğrenci kulüpleri, P4C, çocuklar için felsefe, okul kulüpleri, sosyal etkinlikler, yetenek gelişimi, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -111,7 +111,7 @@
     }
 
     .club-hero {
-      background: linear-gradient(135deg, rgba(26, 86, 167, 0.9), rgba(42, 157, 143, 0.9)), url('../image/anasayfa1.JPG') no-repeat center center/cover;
+      background: linear-gradient(135deg, rgba(26, 86, 167, 0.9), rgba(42, 157, 143, 0.9)), url('../image/anasayfa-sirac-koleji.jpg') no-repeat center center/cover;
       color: white;
       padding: 100px 0;
       text-align: center;
@@ -491,7 +491,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="club-card">
           <div class="club-img-container">
-            <img src="../image/dijital eğitim/1.JPEG" alt="Teknoloji Kulübü">
+            <img src="../image/dijital-egitim/1.JPEG" alt="Teknoloji Kulübü">
             <div class="club-overlay">
               <h5 class="text-white mb-0">Teknoloji Kulübü</h5>
             </div>
@@ -510,7 +510,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="club-card">
           <div class="club-img-container">
-            <img src="../image/müzik/3.JPEG" alt="Müzik Kulübü">
+            <img src="../image/muzik/3.JPEG" alt="Müzik Kulübü">
             <div class="club-overlay">
               <h5 class="text-white mb-0">Müzik Kulübü</h5>
             </div>
@@ -529,7 +529,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="club-card">
           <div class="club-img-container">
-            <img src="../image/görsel sanatlar ve ahşap/4.PNG" alt="Görsel Sanatlar Kulübü">
+            <img src="../image/gorsel-sanatlar-ve-ahsap/4.PNG" alt="Görsel Sanatlar Kulübü">
             <div class="club-overlay">
               <h5 class="text-white mb-0">Görsel Sanatlar Kulübü</h5>
             </div>
@@ -596,29 +596,29 @@
             <img src="../image/kitap/2.JPG" alt="Okuma Kulübü">
           </div>
         </a>
-        <a href="../image/görsel sanatlar ve ahşap/4.PNG" data-lightbox="gallery" data-title="Görsel Sanatlar">
+        <a href="../image/gorsel-sanatlar-ve-ahsap/4.PNG" data-lightbox="gallery" data-title="Görsel Sanatlar">
           <div class="gallery-item">
-            <img src="../image/görsel sanatlar ve ahşap/4.PNG" alt="Görsel Sanatlar">
+            <img src="../image/gorsel-sanatlar-ve-ahsap/4.PNG" alt="Görsel Sanatlar">
           </div>
         </a>
-        <a href="../image/görsel sanatlar ve ahşap/6.jpg" data-lightbox="gallery" data-title="Ahşap Atölyesi">
+        <a href="../image/gorsel-sanatlar-ve-ahsap/6.jpg" data-lightbox="gallery" data-title="Ahşap Atölyesi">
           <div class="gallery-item">
-            <img src="../image/görsel sanatlar ve ahşap/6.jpg" alt="Ahşap Atölyesi">
+            <img src="../image/gorsel-sanatlar-ve-ahsap/6.jpg" alt="Ahşap Atölyesi">
           </div>
         </a>
-        <a href="../image/akıl ve zeka oyunları/akilve zaka1.JPG" data-lightbox="gallery" data-title="Zeka Oyunları">
+        <a href="../image/akil-ve-zeka-oyunlari/akilve zaka1.JPG" data-lightbox="gallery" data-title="Zeka Oyunları">
           <div class="gallery-item">
-            <img src="../image/akıl ve zeka oyunları/akilve zaka1.JPG" alt="Zeka Oyunları">
+            <img src="../image/akil-ve-zeka-oyunlari/akilve zaka1.JPG" alt="Zeka Oyunları">
           </div>
         </a>
-        <a href="../image/akıl ve zeka oyunları/akilvzaka2.JPG" data-lightbox="gallery" data-title="Zeka Oyunları">
+        <a href="../image/akil-ve-zeka-oyunlari/akilvzaka2.JPG" data-lightbox="gallery" data-title="Zeka Oyunları">
           <div class="gallery-item">
-            <img src="../image/akıl ve zeka oyunları/akilvzaka2.JPG" alt="Zeka Oyunları">
+            <img src="../image/akil-ve-zeka-oyunlari/akilvzaka2.JPG" alt="Zeka Oyunları">
           </div>
         </a>
-        <a href="../image/dijital eğitim/2.JPG" data-lightbox="gallery" data-title="Teknoloji Kulübü">
+        <a href="../image/dijital-egitim/2.JPG" data-lightbox="gallery" data-title="Teknoloji Kulübü">
           <div class="gallery-item">
-            <img src="../image/dijital eğitim/2.JPG" alt="Teknoloji Kulübü">
+            <img src="../image/dijital-egitim/2.JPG" alt="Teknoloji Kulübü">
           </div>
         </a>
         <a href="../image/robotik kodlama/3.JPG" data-lightbox="gallery" data-title="Robotik Kodlama">
@@ -641,14 +641,14 @@
             <img src="../image/robotik kodlama/4.JPG" alt="Robotik Projeler">
           </div>
         </a>
-        <a href="../image/müzik/3.JPEG" data-lightbox="gallery" data-title="Müzik Kulübü">
+        <a href="../image/muzik/3.JPEG" data-lightbox="gallery" data-title="Müzik Kulübü">
           <div class="gallery-item">
-            <img src="../image/müzik/3.JPEG" alt="Müzik Kulübü">
+            <img src="../image/muzik/3.JPEG" alt="Müzik Kulübü">
           </div>
         </a>
-        <a href="../image/müzik/2.PNG" data-lightbox="gallery" data-title="Müzik Etkinliği">
+        <a href="../image/muzik/2.PNG" data-lightbox="gallery" data-title="Müzik Etkinliği">
           <div class="gallery-item">
-            <img src="../image/müzik/2.PNG" alt="Müzik Etkinliği">
+            <img src="../image/muzik/2.PNG" alt="Müzik Etkinliği">
           </div>
         </a>
       </div>
