--- a/misyon.html
+++ b/misyon.html
@@ -6,7 +6,7 @@
   <title>Misyon ve Vizyon - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji olarak misyonumuz, köklü medeniyet mirasımıza sahip çıkan, üretken ve sorumluluk sahibi nesiller yetiştirmektir. Vizyonumuz ise kendini gerçekleştirmiş, iletişim becerileri yüksek bireyler yetiştiren öncü bir kurum olmaktır.">
   <meta name="keywords" content="misyon, vizyon, eğitim felsefesi, hedefler, amaçlar, medeniyet mirası, üretken nesiller, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -115,7 +115,7 @@
           <p class="mb-4">18 Mart Sirac Koleji olarak tüm zamanlarda insanlığa ilim, edep, ahlak, medeniyet gibi birçok konuda katkıda bulunmuş olan ecdadını örnek alıp köklü medeniyet mirasına sahip çıkan nesiller yetiştirmeyi amaçlamaktayız.</p>
           <p>Eğitim ve öğretim faaliyetlerimizde alternatif modeller kullanarak öğrencilerimizin her bilgiyi özgür doğasının içerisinde keşfetmesini sağlıyoruz. Bilgiyi üretken olarak kullanabilen, sorumluluk alabilen ve yaşam gayesinin farkında olan bireyler yetiştiriyoruz.</p>
           <div class="signature mt-4">
-            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="Sirac Koleji Misyon" class="img-fluid" width="120">
+            <img src="../image/misyon-vizyon.jpg" alt="Sirac Koleji Misyon" class="img-fluid" width="120">
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
           <p class="mb-4">Geleceğe bakışımız; kendini gerçekleştirme yolunda ilerleyen, aldığı değerler eğitimi ile iç huzurunu sağlamış, başladığı işi başarıyla tamamlama yetisine sahip bireyler yetiştirmektir.</p>
           <p>Kendini ifade edebilen, iletişim kurma becerisi yüksek nesiller yetiştiren ve toplumları ayırmaksızın eğitim öğretim ihtiyaçlarını karşılayan bir kurum olmayı hedefliyoruz. Bu vizyonla her geçen gün kendimizi geliştiriyor ve eğitim standartlarımızı yükseltiyoruz.</p>
           <div class="signature mt-4">
-            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="Sirac Koleji Vizyon" class="img-fluid" width="120">
+            <img src="../image/misyon-vizyon.jpg" alt="Sirac Koleji Vizyon" class="img-fluid" width="120">
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../image/anasayfa1.JPG') repeat;
+    background: url('../image/anasayfa-sirac-koleji.jpg') repeat;
     opacity: 0.03;
     z-index: 0;
   }
