--- a/ogretmen-kadromuz.html
+++ b/ogretmen-kadromuz.html
@@ -6,7 +6,7 @@
   <title>Öğretmen Kadromuz - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nin alanında uzman, deneyimli ve sevgi dolu öğretmen kadrosuyla tanışın. Öğrencilerimizin geleceğini şekillendiren değerli eğitimcilerimiz.">
   <meta name="keywords" content="öğretmen kadrosu, eğitimciler, uzman öğretmenler, anaokulu öğretmeni, sınıf öğretmeni, branş öğretmenleri, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -105,7 +105,7 @@
       <!-- Şengül Karaca Göktaş -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/mudur.sangul.jpg" class="teacher-img" alt="Şengül Karaca Göktaş">
+          <img src="../image/ogretmenler/mudur.sangul.jpg" class="teacher-img" alt="Şengül Karaca Göktaş">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şengül Karaca Göktaş</h5>
             <p class="text-muted">Okul Müdürü</p>
@@ -119,7 +119,7 @@
       <!-- Elif Soytaş -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/images.png" class="teacher-img" alt="Elif Soytaş">
+          <img src="../image/ogretmenler/images.png" class="teacher-img" alt="Elif Soytaş">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Elif Soytaş</h5>
             <p class="text-muted">Müdür Yardımcısı</p>
@@ -133,7 +133,7 @@
       <!-- Seda Nur Tekeli -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/seda nur.jpg" class="teacher-img" alt="Seda Nur Tekeli">
+          <img src="../image/ogretmenler/seda nur.jpg" class="teacher-img" alt="Seda Nur Tekeli">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Seda Nur Tekeli</h5>
             <p class="text-muted">İngilizce Öğretmeni</p>
@@ -147,7 +147,7 @@
       <!-- Dilek Orhan -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/dilek.jpg" class="teacher-img" alt="Dilek Orhan">
+          <img src="../image/ogretmenler/dilek.jpg" class="teacher-img" alt="Dilek Orhan">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Dilek Orhan</h5>
             <p class="text-muted">Görsel Sanatlar Öğretmeni</p>
@@ -161,7 +161,7 @@
       <!-- Beyzanur Ateş -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/images.png" class="teacher-img" alt="Beyzanur Ateş">
+          <img src="../image/ogretmenler/images.png" class="teacher-img" alt="Beyzanur Ateş">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Beyzanur Ateş</h5>
             <p class="text-muted">Matematik Öğretmeni</p>
@@ -175,7 +175,7 @@
       <!-- Melike Nur Sezer -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/images.png" class="teacher-img" alt="Melike Nur Sezer">
+          <img src="../image/ogretmenler/images.png" class="teacher-img" alt="Melike Nur Sezer">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Melike Nur Sezer</h5>
             <p class="text-muted">Anaokulu Öğretmeni</p>
@@ -189,7 +189,7 @@
       <!-- Mustafa Kubilay Ergül -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/mustafe.jpg" class="teacher-img" alt="Mustafa Kubilay Ergül">
+          <img src="../image/ogretmenler/mustafa-kubilay-ergul.jpg" class="teacher-img" alt="Mustafa Kubilay Ergül">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Mustafa Kubilay Ergül</h5>
             <p class="text-muted">Beden Eğitimi Öğretmeni</p>
@@ -203,7 +203,7 @@
       <!-- Furkan Köksal -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/furgan.koksal.jpg" class="teacher-img" alt="Furkan Köksal">
+          <img src="../image/ogretmenler/furkan-koksal.jpg" class="teacher-img" alt="Furkan Köksal">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Furkan Köksal</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -217,7 +217,7 @@
       <!-- Başak Kökçak -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/basak.kokcak.jpg" class="teacher-img" alt="Başak Kökçak">
+          <img src="../image/ogretmenler/basak-kokcak.jpg" class="teacher-img" alt="Başak Kökçak">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Başak Kökçak</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -231,7 +231,7 @@
       <!-- Hatice Şuheda Bayram -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/images.png" class="teacher-img" alt="Hatice Şuheda Bayram">
+          <img src="../image/ogretmenler/images.png" class="teacher-img" alt="Hatice Şuheda Bayram">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Hatice Şuheda Bayram</h5>
             <p class="text-muted">Psikolojik Danışman</p>
@@ -245,7 +245,7 @@
       <!-- Figen Aksoy -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/figan.aksoy.jpg" class="teacher-img" alt="Figen Aksoy">
+          <img src="../image/ogretmenler/figen-aksoy.jpg" class="teacher-img" alt="Figen Aksoy">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Figen Aksoy</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
@@ -259,7 +259,7 @@
       <!-- Zeynep Topçu -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/zeynap.jpg" class="teacher-img" alt="Zeynep Topçu">
+          <img src="../image/ogretmenler/zeynep-topcu.jpg" class="teacher-img" alt="Zeynep Topçu">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Zeynep Topçu</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -273,7 +273,7 @@
       <!-- Şeyma Işık -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/seyma.isik.jpg" class="teacher-img" alt="Şeyma Işık">
+          <img src="../image/ogretmenler/seyma-isik.jpg" class="teacher-img" alt="Şeyma Işık">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şeyma Işık</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
