--- a/robotik.html
+++ b/robotik.html
@@ -6,7 +6,7 @@
   <title>Robotik Kodlama Atölyesi - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji Robotik Kodlama Atölyesi'nde öğrencilerimiz, Scratch, Arduino ve Python gibi araçlarla geleceğin teknolojilerini öğreniyor, yaratıcılıklarını ve problem çözme becerilerini geliştiriyorlar.">
   <meta name="keywords" content="robotik kodlama, STEM, Arduino, Python, Scratch, teknoloji eğitimi, inovasyon, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
     <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -180,7 +180,7 @@
 <style>
   .hero-section {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-              url('../image/robotkodlama.JPG') center/cover no-repeat;
+              url('../image/robotik-kodlama-atolyesi.jpg') center/cover no-repeat;
   color: white;
   padding: 180px 0;
   text-align: center;
