--- a/tasavvuf.html
+++ b/tasavvuf.html
@@ -6,7 +6,7 @@
   <title>Tasavvuf Müziği Atölyesi - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji Tasavvuf Müziği Atölyesi'nde öğrencilerimiz, müziğin manevi derinliğini keşfeder, ritim ve enstrüman eğitimi alarak kültürel bağlarını güçlendirirler.">
   <meta name="keywords" content="tasavvuf müziği, ney, bendir, kudüm, bağlama, ilahi, marş, ritim eğitimi, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
    <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -105,7 +105,7 @@
     <div class="row g-4 align-items-center mb-5">
       <div class="col-lg-6 order-lg-2">
         <div class="tasawwuf-main-image rounded-4 overflow-hidden shadow-lg position-relative">
-          <img src="../image/müzik/2.PNG" 
+          <img src="../image/muzik/2.PNG" 
                alt="Tasavvuf Müziği" class="img-fluid w-100">
           <div class="image-overlay"></div>
         </div>
@@ -182,7 +182,7 @@
       <div class="col-lg-6">
         <div class="tasawwuf-card p-4 p-lg-5 rounded-4 h-100">
           <div class="practice-image mb-4 rounded-3 overflow-hidden">
-            <img src="../image/müzik/3.JPEG" 
+            <img src="../image/muzik/3.JPEG" 
                  alt="Grup Çalışması" class="img-fluid w-100">
           </div>
           <h3 class="mb-4">Grup Çalışmaları</h3>
