--- a/anlayis.html
+++ b/anlayis.html
@@ -6,7 +6,7 @@
   <title>Eğitim Anlayışımız - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji olarak, Montessori Destekli Değer Yaklaşımı ile her öğrencinin bireysel potansiyelini en üst düzeye çıkarmayı hedefleyen bir eğitim felsefesi benimsiyoruz.">
   <meta name="keywords" content="eğitim anlayışı, Montessori, değerler eğitimi, çoklu zeka kuramı, bireysel gelişim, İslami eğitim, Çanakkale özel okul">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -14,7 +14,7 @@
   <style>
     .education-header {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-              url('../image/anasayfa1.JPG') center/cover no-repeat;
+              url('../image/anasayfa-sirac-koleji.jpg') center/cover no-repeat;
   color: white;
   padding: 160px 0 120px; /* Üst ve alt boşluğu artırdık */
   min-height: 500px;      /* Minimum yükseklik ekledik */
@@ -82,7 +82,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
