--- a/helal-ve-saglikli.html
+++ b/helal-ve-saglikli.html
@@ -6,7 +6,7 @@
   <title>Helal ve Sağlıklı Beslenme - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji olarak, öğrencilerimizin ruhsal ve fiziksel gelişimini destekleyen, %100 helal sertifikalı ve doğal ürünlerle hazırlanan sağlıklı beslenme programı sunuyoruz.">
   <meta name="keywords" content="helal beslenme, sağlıklı gıda, doğal ürünler, helal sertifikalı, okul yemekleri, katkısız gıda, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -338,19 +338,19 @@
     
     <div class="image-gallery" data-aos="fade-up" data-aos-delay="200">
       <div class="gallery-item">
-        <img src="../image/helal ve saglik/saglik1.avif" alt="Sağlıklı Beslenme">
+        <img src="../image/helal-ve-saglik/saglik1.avif" alt="Sağlıklı Beslenme">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
       </div>
       <div class="gallery-item">
-        <img src="../image/helal ve saglik/saglik2.avif" alt="Organik Gıdalar">
+        <img src="../image/helal-ve-saglik/saglik2.avif" alt="Organik Gıdalar">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
       </div>
       <div class="gallery-item">
-        <img src="../image/helal ve saglik/saglik3.avif" alt="Taze Meyveler">
+        <img src="../image/helal-ve-saglik/saglik3.avif" alt="Taze Meyveler">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
