--- a/iletisim.html
+++ b/iletisim.html
@@ -6,7 +6,7 @@
   <title>İletişim - 18 Mart Sirac Koleji | Bize Ulaşın</title>
   <meta name="description" content="18 Mart Sirac Koleji ile iletişime geçin. Adres, telefon, e-posta bilgilerimiz ve iletişim formumuz üzerinden bize kolayca ulaşabilirsiniz. Sorularınızı ve görüşlerinizi bekliyoruz.">
   <meta name="keywords" content="iletişim, adres, telefon, e-posta, harita, ulaşım, Çanakkale özel okul, Sirac Koleji iletişim">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg">
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -91,7 +91,7 @@
     
     /* HERO SECTION */
     .contact-hero {
-      background: linear-gradient(rgba(26, 86, 167, 0.85), rgba(26, 86, 167, 0.85)), url('../image/anasayfa1.JPG') center center/cover no-repeat;
+      background: linear-gradient(rgba(26, 86, 167, 0.85), rgba(26, 86, 167, 0.85)), url('../image/anasayfa-sirac-koleji.jpg') center center/cover no-repeat;
       color: white;
       padding: 150px 0 100px;
       text-align: center;
@@ -467,7 +467,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+        <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
         <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
       </a>
 
