--- a/mutfak.html
+++ b/mutfak.html
@@ -6,7 +6,7 @@
   <title>Mutfak Atölyesi - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji Mutfak Atölyesi'nde öğrencilerimiz, yaparak ve yaşayarak öğrenirler. Sağlıklı beslenme alışkanlıkları kazanır, özgüven ve sorumluluk duygularını geliştirirler.">
   <meta name="keywords" content="mutfak atölyesi, sağlıklı beslenme, hayat becerileri, yaparak öğrenme, çocuklarla yemek, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -107,7 +107,7 @@
       <!-- Image Column -->
       <div class="col-lg-6">
         <div class="kitchen-image-container rounded-4 overflow-hidden shadow-lg position-relative">
-          <img src="../image/mutfak atölyesi/1.JPG" 
+          <img src="../image/mutfak-atolyesi/1.JPG" 
                alt="Çocuklar mutfakta çalışıyor" class="img-fluid w-100">
           <div class="image-overlay d-flex align-items-center justify-content-center">
             <div class="overlay-content text-center text-white">
@@ -180,7 +180,7 @@
               </ul>
             </div>
             <div class="col-lg-6 text-center">
-              <img src="../image/mutfak atölyesi/2.JPG" 
+              <img src="../image/mutfak-atolyesi/2.JPG" 
                    alt="Çocuklar mutfak etkinliğinde" class="img-fluid rounded-3 shadow">
             </div>
           </div>
@@ -193,7 +193,7 @@
 <style>
   .hero-section {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-              url('../image/mutfakbackground.JPG') center/cover no-repeat;
+              url('../image/mutfak-atolyesi-arkaplan.jpg') center/cover no-repeat;
   color: white;
   padding: 180px 0;
   text-align: center;
