--- a/oyun.html
+++ b/oyun.html
@@ -6,7 +6,7 @@
   <title>Oyun ve Fiziki Etkinlikler - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nde, tekvando gibi spor dallarıyla öğrencilerimizin fiziksel ve zihinsel gelişimini destekliyoruz. Disiplin, saygı ve özgüven kazandıran fiziki etkinliklerimiz hakkında bilgi alın.">
   <meta name="keywords" content="fiziki etkinlikler, tekvando, spor eğitimi, oyun, disiplin, özgüven, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.2/css/lightgallery.min.css">
@@ -46,7 +46,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('../image/sporbackgraound.JPG') center/cover;
+      background: url('../image/spor-etkinlikleri-arkaplan.jpg') center/cover;
       opacity: 0.15;
     }
     
@@ -364,7 +364,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -497,7 +497,7 @@
   <div class="container">
     <h2 class="mb-5">Tekvando Eğitimlerimizden Görüntüler</h2>
     <div class="video-container">
-      <video poster="../image/VIDOU.mp4" class="w-100">
+      <video poster="../image/tanitim-videosu.mp4" class="w-100">
         <source src="../image/tekvando/6.JPG" type="video/mp4">
         Tarayıcınız video öğesini desteklemiyor.
       </video>
