--- a/rehberlik.html
+++ b/rehberlik.html
@@ -6,7 +6,7 @@
   <title>Rehberlik ve Psikolojik Danışmanlık - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji olarak, öğrenci, veli ve öğretmenlerimize yönelik kapsamlı rehberlik ve psikolojik danışmanlık hizmetleri sunuyoruz. Bütünsel gelişim için yanınızdayız.">
   <meta name="keywords" content="rehberlik, psikolojik danışmanlık, öğrenci rehberliği, veli rehberliği, öğretmen rehberliği, akademik takip, mesleki rehberlik, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -212,7 +212,7 @@
               </div>
             </div>
             <div class="col-lg-4 text-center">
-              <img src="../image/sınıf görüntüsü/2.JPG" 
+              <img src="../image/sinif-goruntusu/2.JPG" 
                    alt="Rehberlik çalışmaları" class="img-fluid rounded-3">
             </div>
           </div>
@@ -236,7 +236,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../image/anasayfa1.JPG') repeat;
+    background: url('../image/anasayfa-sirac-koleji.jpg') repeat;
     opacity: 0.03;
     z-index: 0;
   }
