--- a/sosyalyardim.html
+++ b/sosyalyardim.html
@@ -6,7 +6,7 @@
   <title>Sosyal Yardımlaşma Projeleri - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji olarak, öğrencilerimizde empati ve yardımlaşma duygularını geliştirmek amacıyla çeşitli sosyal yardım projeleri yürütüyoruz. Topluma faydalı bireyler yetiştiriyoruz.">
   <meta name="keywords" content="sosyal yardım, sosyal sorumluluk, yardım projeleri, empati, yardımlaşma, topluma hizmet, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -336,19 +336,19 @@
     
     <div class="image-gallery">
       <div class="gallery-item">
-        <img src="../image/sosyal yardımlaşma/2.JPG" alt="Yardım Faaliyetleri">
+        <img src="../image/sosyal-yardimlasma/2.JPG" alt="Yardım Faaliyetleri">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
       </div>
       <div class="gallery-item">
-        <img src="../image/sosyal yardımlaşma/3.JPG" alt="Su Kuyusu Projesi">
+        <img src="../image/sosyal-yardimlasma/3.JPG" alt="Su Kuyusu Projesi">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
       </div>
       <div class="gallery-item">
-        <img src="../image/sosyal yardımlaşma/4.jpg" alt="Ramazan Yardımları">
+        <img src="../image/sosyal-yardimlasma/4.jpg" alt="Ramazan Yardımları">
         <div class="gallery-overlay">
           <i class="fas fa-search-plus"></i>
         </div>
