--- a/tarihce.html
+++ b/tarihce.html
@@ -6,7 +6,7 @@
   <title>Okul Kültürü ve Tarihçe - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nin köklü geçmişi ve güçlü okul kültürü hakkında bilgi edinin. İşbirliği, dürüstlük ve bütünsel gelişim ilkeleriyle geleceğe umutla bakan nesiller yetiştiriyoruz.">
   <meta name="keywords" content="okul kültürü, tarihçe, kuruluş, işbirliği, dürüstlük, bütünsel gelişim, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -106,7 +106,7 @@
     <div class="row g-4 align-items-center">
       <div class="col-lg-6">
         <div class="history-image rounded-4 overflow-hidden shadow-lg">
-          <img src="../image/anasayfa1.JPG" 
+          <img src="../image/anasayfa-sirac-koleji.jpg" 
                alt="18 Mart Sirac Koleji Okul Binası" class="img-fluid w-100">
           <div class="year-badge">2016</div>
         </div>
@@ -216,7 +216,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../image/anasayfa1.JPG') repeat;
+    background: url('../image/anasayfa-sirac-koleji.jpg') repeat;
     opacity: 0.05;
     z-index: 0;
   }
