--- a/yabancidil.html
+++ b/yabancidil.html
@@ -6,7 +6,7 @@
   <title>Yabancı Dil Eğitimi (İngilizce ve Arapça) - 18 Mart Sirac Koleji</title>
   <meta name="description" content="18 Mart Sirac Koleji'nde, Montessori felsefesiyle zenginleştirilmiş İngilizce ve Arapça dil eğitimi programlarımızla öğrencilerimize küresel bir bakış açısı kazandırıyoruz.">
   <meta name="keywords" content="yabancı dil eğitimi, İngilizce, Arapça, Montessori ile dil öğrenimi, konuşma odaklı eğitim, Çanakkale özel okul, Sirac Koleji">
-  <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
+  <link rel="icon" type="image/png" href="../image/sirac-koleji-logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
        <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
